# otxserver

./: .env  README.md  db.sqlite3  index.html  main.py  pyproject.toml
config/: env.py
dispatch/: admin.py  models.py  serializers.py  urls.py  views.py
dispatch/migrations/: 0001_initial.py  0002_initial.py  0003_alter_dispatch_total_cost.py  0004_alter_dispatch_destination_location_and_more.py
file/: models.py  serializers.py  urls.py  views.py
file/migrations/: 0001_initial.py  0002_alter_file_name.py
kyc/: admin.py  models.py  serializers.py  urls.py  views.py
kyc/migrations/: 0001_initial.py  0002_initial.py
libs/: cloudinary.py
server/: asgi.py  routing.py  settings.py  urls.py
track/: consumer.py
user/: admin.py  backend.py  models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_latitude_alter_user_longitude.py
utilities/: base_model.py  queue.py  sanitize.py
