[project]
name = "otxserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-unfold>=0.65.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.10",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "orjson>=3.11.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "whitenoise>=6.10.0",
]
